--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
+    data-react-helmet="true"
       name="description"
       content="Web site created using create-react-app"
     />
@@ -28,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title data-react-helmet="true">React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
